--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -1,4 +1,5 @@
 .nav {
+  width: 100%;
   padding: 20px 0;
 }
 
@@ -11,5 +12,67 @@
 .nav li {
   &:not(:last-child) {
     margin-right: 35px;
+  }
+}
+
+.nav__toggle {
+  display: none;
+}
+
+@media (max-width: $medium-width) {
+  .nav--closed ul {
+    width: 100vw;
+    order: 2;
+    top: 0;
+    z-index: -1;
+    flex-direction: column;
+    background-color: $accent-main;
+  }
+
+  .nav__toggle {
+    display: block;
+    position: absolute;
+    top: 55px;
+    left: 45px;
+    width: 25px;
+    height: 16px;
+    border: none;
+    background-color: transparent;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 25px 16px;
+  }
+
+  .nav--opened {
+    .nav__toggle {
+      background-image: url("../img/icons/icon_menu-burger--dark.svg");
+    }
+
+    ul {
+      display: none;
+    }
+  }
+
+  .nav--closed {
+    .nav__toggle {
+      background-image: url("../img/icons/icon_menu-burger--light.svg");
+    }
+  }
+
+  .nojs .nav {
+    position: relative;
+    width: 100%;
+    height: 568px;
+    padding: 0;
+
+    ul {
+      display: block;
+      position: absolute;
+      height: 368px;
+    }
+
+    .nav__toggle {
+      display: none;
+    }
   }
 }
