--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,7 +6,9 @@
 
 //blocks
 @import "blocks/header.scss";
+@import "blocks/logo.scss";
 @import "blocks/nav.scss";
+@import "blocks/page-header.scss";
 @import "blocks/promo.scss";
 @import "blocks/search.scss";
 @import "blocks/user.scss";
