--- a/source/sass/blocks/search.scss
+++ b/source/sass/blocks/search.scss
@@ -1,13 +1,45 @@
+.search {
+  position: relative;
+  padding: 0;
+}
+
+.search svg {
+  position: absolute;
+  width: 14px;
+  height: 14px;
+}
+
 .search input {
   width: inherit;
+  min-height: 14px;
+  padding: 0;
   background-color: rgba($basic-white, 0.15);
   border: none;
   border-radius: 21px;
+
+  &::placeholder {
+    padding: 0 29px;
+    color: $basic-content-light;
+  }
+
 }
 
 @media (max-width: $medium-width) {
  .search {
     order: 1;
     width: 100%;
+ }
+
+ .search svg {
+   width: 16px;
+   height: 16px;
+ }
+
+ .search input {
+   min-height: 40px;
+
+  &::placeholder {
+    color: transparent;
+  }
  }
 }
