--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,6 +1,7 @@
 //colors
 $basic-black: #000000;
 $basic-white: #ffffff;
+$basic-black-opacity: (0, 0, 0, 0.1);
 
 $basic-content-dark: #1D1613;
 $basic-content-light: #9B9997;
