--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -58,12 +58,23 @@
     left: 45px;
     width: 25px;
     height: 16px;
+    cursor: pointer;
     border: none;
     color: inherit;
     background-color: transparent;
     background-position: center;
     background-repeat: no-repeat;
     background-size: 25px 16px;
+
+    & svg {
+      &:hover {
+        stroke: $accent-bg-opacity07;
+      }
+
+      &:active {
+        stroke: $accent-bg;
+      }
+    }
   }
 
   .nojs .nav {
