--- a/source/sass/blocks/search.scss
+++ b/source/sass/blocks/search.scss
@@ -1,6 +1,7 @@
 .search {
   position: relative;
   padding: 0;
+  line-height: 21px;
 }
 
 .search svg {
@@ -13,9 +14,20 @@
   width: inherit;
   min-height: 14px;
   padding: 0;
+  box-sizing: border-box;
   background-color: rgba($basic-white, 0.15);
-  border: none;
+  border: 2px solid transparent;
   border-radius: 21px;
+  outline: none;
+
+  &:hover {
+    border: 2px solid $accent-bg-opacity07;
+    box-shadow: 0px 5px 10px 2px $accent-bg-opacity07;
+  }
+
+  &:focus {
+    border: 2px solid $accent-bg;
+  }
 
   &::placeholder {
     padding: 0 29px;
