--- a/source/sass/blocks/carousel.scss
+++ b/source/sass/blocks/carousel.scss
@@ -1,6 +1,7 @@
-.carousel {
+.nojs .carousel {
   position: relative;
-  &__button {
+  overflow-x: hidden;
+/*  &__button {
     position: absolute;
     top: -82px;
     padding: 0;
@@ -20,17 +21,37 @@
 
   & svg {
     vertical-align: middle;
+  }*/
+}
+
+.carousel__item {
+  @media (min-width: $large-width-only) {
+
+      padding-right: 30px;
+
+
+  &:nth-child(4n+4) {
+    padding-right: 0;
   }
 }
 
-.carousel ul {
-  @include reset-list;
-  @include display-flex-wrap;
+  @media (max-width: $medium-width) {
+    &:not(:nth-child(2n+2)) {
+     padding-right: 20px
+    }
+
+    &:not(:nth-child(2n+1)) {
+    padding-left: 20px
+    }
+  }
 }
 
-.carousel li {
+.nojs .carousel__item {
   @include display-flex-wrap;
+  height: 284px;
   width: 22.5%;
+  margin-bottom: 25px;
+  padding: 0;
 
   @media (min-width: $large-width-only) {
     &:not(:nth-child(4n+4)) {
@@ -49,21 +70,15 @@
 
 .carousel a {
   width: 100%;
-  height: 100%;
   color: inherit;
   text-decoration: none;
 }
 
-.carousel__img {
+.carousel img {
   width: 100%;
+  display: block;
   height: 284px;
   margin-bottom: 25px;
-}
-
-.carousel img {
-  display: block;
-  width: 100%;
-  height: 100%;
   object-fit: cover;
 }
 
@@ -80,4 +95,3 @@
   text-align: center;
   font-weight: 700;
 }
-
