--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,6 +15,8 @@
 @import "blocks/page-header.scss";
 @import "blocks/promo.scss";
 @import "blocks/search.scss";
+@import "blocks/slick.scss";
+@import "blocks/slick-theme.scss";
 @import "blocks/subscription.scss";
 @import "blocks/social.scss";
 @import "blocks/user.scss";
