Добавляет аккордеон блоку faq

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,7 @@
 @import "global/global.scss";
 
 //blocks
+@import "blocks/accordion.scss";
 @import "blocks/articles.scss";
 @import "blocks/carousel.scss";
 @import "blocks/faq.scss";
