--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -67,6 +67,6 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 5;
-  background-color: $basic-white;
+  z-index: 1;
+  background-color: $accent-bg-opacity07;
 }
