--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -40,14 +40,14 @@
     display: block;
   }
 
-  .nav--closed ul {
+  .nav--open ul {
     position: absolute;
     bottom: -1;
     z-index: 1;
     flex-direction: column;
   }
 
-  .nav--opened ul {
+  .nav--close ul {
     display: none;
   }
 
