--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -33,7 +33,8 @@
 
     @media (min-resolution: 2dppx) {
       background-image:
-        linear-gradient( $accent-bg-opacity07, $accent-bg-opacity07),url("../img/main/main-promo_large@2x.webp");
+        linear-gradient( $accent-bg-opacity07, $accent-bg-opacity07),
+        url("../img/main/main-promo_large@2x.webp");
     }
   }
 
@@ -67,7 +68,8 @@
 
       @media (min-resolution: 2dppx) {
         background-image:
-          linear-gradient( $accent-bg-opacity07, $accent-bg-opacity07),url("../img/main/main-promo_medium@2x.webp");
+          linear-gradient( $accent-bg-opacity07, $accent-bg-opacity07),
+          url("../img/main/main-promo_medium@2x.webp");
       }
     }
   }
@@ -102,7 +104,8 @@
 
       @media (min-resolution: 2dppx) {
         background-image:
-          linear-gradient( $accent-bg-opacity07, $accent-bg-opacity07),url("../img/main/main-promo_small@2x.webp");
+          linear-gradient( $accent-bg-opacity07, $accent-bg-opacity07),
+          url("../img/main/main-promo_small@2x.webp");
       }
     }
   }
