--- a/source/sass/blocks/slick-theme.scss
+++ b/source/sass/blocks/slick-theme.scss
@@ -10,7 +10,7 @@
 $slick-font-path: "./fonts/" !default;
 $slick-font-family: "slick" !default;
 $slick-loader-path: "./" !default;
-$slick-arrow-color: white !default;
+$slick-arrow-color: #A87B62 !default;
 $slick-dot-color: black !default;
 $slick-dot-color-active: $slick-dot-color !default;
 $slick-prev-character: "\2190" !default;
@@ -18,7 +18,7 @@ $slick-next-character: "\2192" !default;
 $slick-dot-character: "\2022" !default;
 $slick-dot-size: 6px !default;
 $slick-opacity-default: 0.75 !default;
-$slick-opacity-on-hover: 1 !default;
+$slick-opacity-on-hover: 0.5 !default;
 $slick-opacity-not-active: 0.25 !default;
 
 @function slick-image-url($url) {
@@ -59,17 +59,17 @@ $slick-opacity-not-active: 0.25 !default;
 }
 
 /* Arrows */
-
 .slick-prev,
 .slick-next {
     position: absolute;
     display: block;
     height: 20px;
-    width: 20px;
+    width: 40px;
+    border-radius: 5px;
     line-height: 0px;
     font-size: 0px;
     cursor: pointer;
-    background: red;
+    background: transparent;
     color: transparent;
     top: -82px;
     -webkit-transform: translate(0, -50%);
@@ -78,6 +78,10 @@ $slick-opacity-not-active: 0.25 !default;
     padding: 0;
     border: none;
     outline: none;
+    &:before {
+            opacity: 0;
+        }
+
     &:hover, &:focus {
         outline: none;
         background: transparent;
@@ -101,10 +105,10 @@ $slick-opacity-not-active: 0.25 !default;
 }
 
 .slick-prev {
-    left: 45px;
+    left: 0;
     [dir="rtl"] & {
         left: auto;
-        right: -25px;
+        right: 0;
     }
     &:before {
         content: $slick-prev-character;
@@ -115,9 +119,9 @@ $slick-opacity-not-active: 0.25 !default;
 }
 
 .slick-next {
-    right: 45px;
+    right: 0;
     [dir="rtl"] & {
-        left: -25px;
+        left: 0;
         right: auto;
     }
     &:before {
