--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,15 +8,21 @@
 @import "blocks/accordion.scss";
 @import "blocks/articles.scss";
 @import "blocks/carousel.scss";
+@import "blocks/catalog.scss";
 @import "blocks/faq.scss";
+@import "blocks/filters.scss";
 @import "blocks/follow.scss";
 @import "blocks/footer.scss";
 @import "blocks/header.scss";
+@import "blocks/login.scss";
 @import "blocks/logo.scss";
 @import "blocks/nav.scss";
 @import "blocks/nav-footer.scss";
 @import "blocks/novelty.scss";
 @import "blocks/page-header.scss";
+@import "blocks/popup.scss";
+@import "blocks/price.scss";
+@import "blocks/products.scss";
 @import "blocks/promo.scss";
 @import "blocks/search.scss";
 @import "blocks/slick.scss";
