--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -9,6 +9,7 @@ $accent-main: #A87B62;
 $accent-bg: #563634;
 $accent-bg-light: #f0eae4;
 $accent-bg-opacity07: rgba(86, 64, 52, 0.7);
+$section-border: #f6f5f4;
 $popup-shadow: #f8f7f5;
 $popup-accent-bg: #f0eae4;
 
@@ -16,3 +17,4 @@ $popup-accent-bg: #f0eae4;
 $small-width: 767px;
 $medium-width: 1023px;
 $large-width-only: 1024px;
+
