--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,14 +1,19 @@
 .header {
   position: relative;
-
-  @include display-flex-wrap;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 96px;
-  margin-bottom: 17px;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-template-rows: min(106px);
+  gap: 3%;
+  margin-bottom: 18px;
+  padding-bottom: 8px;
+  font-size: 14px;
+  line-height: 21px;
+  border-bottom: 1px solid $section-border;
 
   @media (max-width: $medium-width) {
-    margin-bottom: 0;
+    @include display-flex-wrap;
+    margin-bottom: 16px;
+    border-bottom: none;
   }
 }
 
