--- a/source/sass/blocks/search.scss
+++ b/source/sass/blocks/search.scss
@@ -1,4 +1,6 @@
 .search {
+  @include display-flex-wrap;
+  align-content: center;
   position: relative;
   padding: 0;
   line-height: 21px;
@@ -6,12 +8,14 @@
 
 .search svg {
   position: absolute;
+  top: 50%;
+  margin-top: -8px;
   width: 14px;
   height: 14px;
 }
 
 .search input {
-  width: inherit;
+  width: 100%;
   min-height: 14px;
   padding: 0;
   box-sizing: border-box;
@@ -30,7 +34,13 @@
   }
 
   &::placeholder {
-    padding: 0 29px;
+    padding: 0 26px;
+
+    @include poppins-font;
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: 500;
+    letter-spacing: 0.05em;
     color: $basic-content-light;
   }
 
@@ -40,6 +50,7 @@
  .search {
     order: 1;
     width: 100%;
+    margin: 35px 0 14px;
  }
 
  .search svg {
