--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -29,72 +29,19 @@
   text-decoration: none;
 }
 
-.nav__toggle {
-  display: none;
-}
 
 @media (max-width: $medium-width) {
-  .nav--open {
-    position: absolute;
-    z-index: 1;
-
-    & ul {
-    flex-direction: column;
-    }
-
-    .nav__toggle {
-      top: -154px;
-    }
-  }
-
-  .nav--close ul {
+  .nav,
+  .nav .page-header--close {
     display: none;
   }
 
-  .nav__toggle {
+  .nav .page-header--open {
     display: block;
     position: absolute;
-    top: 46px;
-    left: 38px;
-    width: 40px;
-    height: 32px;
-    padding: 8px;
-    cursor: pointer;
-    border: none;
-    color: inherit;
-    background-color: transparent;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 25px 16px;
-
-    & svg {
-      &:hover {
-        stroke: $accent-bg-opacity07;
-      }
-
-      &:active {
-        stroke: $accent-bg;
-      }
-    }
-  }
-
-  .nojs .nav {
-    position: relative;
+    top: 200px;
+    z-index: 1;
     width: 100%;
-    height: 568px;
-    padding: 0;
-
-    ul {
-      display: block;
-
-      height: 368px;
-      margin: 0;
-      padding: 0 45px;
-      flex-direction: column;
-    }
-
-    .nav__toggle {
-      display: none;
-    }
+    height: 600px;
   }
 }
