--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,7 +1,8 @@
 //colors
 $basic-black: #000000;
 $basic-white: #ffffff;
-$basic-black-opacity01: (0, 0, 0, 0.1);
+$basic-black-opacity01: rgba(0, 0, 0, 0.1);
+$basic-white-opacity075: rgba(255, 255, 255, 0.75);
 
 $basic-content-dark: #1D1613;
 $basic-content-light: #9B9997;
