--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,22 +1,39 @@
 .header {
   position: relative;
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  grid-template-rows: min(106px);
-  gap: 3%;
   margin-bottom: 18px;
   padding-bottom: 8px;
+  box-sizing: border-box;
+  grid-template-columns: 1fr auto 1fr;
+  grid-template-rows: min(106px);
+  gap: 9px;
+  align-items: center;
   font-size: 14px;
   line-height: 21px;
   border-bottom: 1px solid $section-border;
 
   @media (max-width: $medium-width) {
-    @include display-flex-wrap;
-    margin-bottom: 16px;
+    margin: 0;
+    padding-bottom: 0;
+    grid-template-rows: min(126px);
+    align-content: center;
     border-bottom: none;
+
+    .page-header--close & {
+      margin: 0;
+    }
+
+    .page-header--open &{
+      margin: 0 0 46px;
+    }
+  }
+
+  @media (max-width: $small-width) {
+    grid-template-rows: min(92px);
+
+    .page-header--open & {
+      margin: 0 0 36px;
+    }
   }
 }
 
-.header__logo {
-  margin: 30px auto 0;
-}
