--- a/source/sass/blocks/user.scss
+++ b/source/sass/blocks/user.scss
@@ -18,6 +18,17 @@
 .user a {
   color: inherit;
   text-decoration: none;
+
+  &:hover,
+  &:focus {
+    color: $accent-bg;
+    border-bottom: 1px solid $accent-bg;
+  }
+
+  &:active {
+    color: $accent-bg-opacity07;
+    border: none;
+  }
 }
 
 .user svg{
@@ -26,9 +37,6 @@
 
 @media (max-width: $medium-width) {
   .user {
-    position: absolute;
-    right: 45px;
-    top: 54px;
     span {
       display: none;
     }
