--- a/source/sass/blocks/carousel.scss
+++ b/source/sass/blocks/carousel.scss
@@ -5,7 +5,7 @@
 
 .nojs .carousel__item {
   @include display-flex-wrap;
-  height: 284px;
+  min-height: 284px;
   width: 22.5%;
   margin-bottom: 25px;
   padding: 0;
@@ -25,6 +25,10 @@
   }
 }
 
+.carousel__item {
+  margin-bottom: 45px;
+}
+
 .carousel a {
   width: 100%;
   color: inherit;
@@ -38,21 +42,38 @@
   height: 284px;
   padding-right: 30px;
   box-sizing: border-box;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   object-fit: cover;
+
+  @media (max-width: $medium-width) {
+    height: 340px;
+    padding-right: 16px;
+  }
+
+  @media (max-width: $small-width) {
+    height: 136px;
+    padding-right: 16px;
+  }
 }
 
 .carousel h3 {
-  margin: 0 auto 15px;
+  margin: 0 auto 4px;
   padding-right: 30px;
   text-align: center;
   font-weight: 500;
+  font-size: 16px;
   line-height: 21px;
+
+  @media (max-width: $medium-width) {
+    padding-right: 16px;
+  }
 }
 
 .carousel span {
   display: block;
   margin: 0 auto;
   text-align: center;
+  vertical-align: middle;
   font-weight: 700;
+  font-size: 14px;
 }
