--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -2,13 +2,9 @@
   @include reset-list;
   @include display-flex-wrap;
   flex-direction: column;
-  width: 100%;
 }
 
 .accordion__item {
-  width: 100%;
-  padding: 50px;
-  box-sizing: border-box;
   border: 1px solid $accent-main;
 
   &:not(:first-child) {
@@ -18,6 +14,7 @@
 
 .accordion__content {
   height: 0;
+  margin: 0;
   overflow: hidden;
   transition: height 1s;
 
