--- a/source/sass/blocks/articles.scss
+++ b/source/sass/blocks/articles.scss
@@ -123,6 +123,7 @@
 }
 
 .articles h3 {
+  width: 65%;
   margin: 0 auto 36px;
   text-align: center;
 
@@ -131,6 +132,7 @@
   font-size: 26px;
   line-height: 130%;
   color: $basic-black;
+
 
   @media (max-width: $medium-width) {
     width: 53%;
