--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -1,24 +1,33 @@
 .subscription {
   @media (max-width: $medium-width) {
+    width: 82.5%;
+    margin-bottom: 48px;
+  }
+  @media (max-width: $small-width) {
     width: 100%;
     margin-bottom: 48px;
   }
 }
 
 .subscription h2 {
-  margin: 0 0 25px;
+  margin: 0 0 8px;
 
   @include cormorantgaramond-font;
   font-weight: 700;
   font-size: 34px;
   line-height: 1.3em;
-  letter-spacing: 3%;
+  letter-spacing: 0.03em;
+
+
+  @media (max-width: $small-width) {
+    margin-bottom: 14px;
+  }
 }
 
 .subscription fieldset {
   width: 100%;
   margin: 0;
-  padding: 0 0 15px;
+  padding: 0 0 8px;
   @include display-flex-wrap;
   justify-content: space-between;
   border: none;
@@ -27,7 +36,8 @@
 }
 
 .subscription legend {
-  margin: 0 0 52px;
+  margin: 0 0 42px;
+  padding: 0;
   font-weight: 400;
   line-height: 21px;
 }
@@ -39,8 +49,12 @@
   border: none;
 
   &::placeholder {
+    @include poppins-font;
+    font-style: normal;
+    font-weight: 500;
     font-size: 14px;
     line-height: 21px;
+    color: $basic-content-light;
   }
 
   &:hover {
@@ -57,13 +71,7 @@
   }
 }
 
-.subscription a {
-  margin-right: 12px;
-  color: inherit;
-  text-decoration: none;
-}
-
-.subscription button {
+.subscription__button {
   min-width: 62px;
   font-size: 16px;
   line-height: 21px;
@@ -71,4 +79,10 @@
   background-color: transparent;
   color: $basic-white;
   text-transform: capitalize;
+}
+
+.subscription a {
+  margin-right: 12px;
+  color: inherit;
+  text-decoration: none;
 }
